--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "country-flag-icons": "^1.5.19",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.7.4",
     "iconsax-reactjs": "^0.0.8",
     "lucide-react": "^0.501.0",
@@ -20,6 +26,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "tailwind-merge": "^3.2.0",
