--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.7.4",
+    "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
