--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.4",
+    "iconsax-reactjs": "^0.0.8",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
