--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@reduxjs/toolkit": "^2.8.2",
+    "async-mutex": "^0.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cookies-next": "^5.1.0",
     "country-flag-icons": "^1.5.19",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.7.4",
@@ -29,6 +32,9 @@
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-redux": "^9.2.0",
+    "react-secure-storage": "^1.3.2",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
   },
